--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "vue-function-api",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Provide logic composition capabilities for Vue.",
-  "keywords": ["vue", "function-api"],
+  "keywords": [
+    "vue",
+    "function-api"
+  ],
   "main": "dist/vue-function-api.js",
   "umd:main": "dist/vue-function-api.umd.js",
   "module": "dist/vue-function-api.module.js",
