--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "dist/"
   ],
   "scripts": {
-    "start": "TARGET=es rollup -c -w",
+    "start": "cross-env TARGET=es rollup -c -w",
     "build": "rollup -c",
-    "test": "NODE_ENV=test jest",
+    "test": "cross-env NODE_ENV=test jest",
     "prepub": "npm run test && npm run build",
     "pub": "npm publish"
   },
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.2",
+    "cross-env": "^5.2.0",
     "jest": "^24.8.0",
     "rollup": "^1.12.0",
     "rollup-plugin-node-resolve": "^5.0.0",
