--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.2",
     "cross-env": "^5.2.0",
+    "husky": "^2.7.0",
     "jest": "^24.8.0",
+    "lint-staged": "^8.2.1",
+    "prettier": "^1.18.2",
     "rollup": "^1.12.0",
     "rollup-plugin-node-resolve": "^5.0.0",
     "rollup-plugin-replace": "^2.2.0",
@@ -44,6 +47,21 @@
   },
   "dependencies": {
     "tslib": "^1.9.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.ts": [
+      "prettier --parser=typescript --write",
+      "git add"
+    ]
   },
   "jest": {
     "verbose": true,
@@ -60,5 +78,10 @@
     "testMatch": [
       "<rootDir>/test/**/*.spec.js"
     ]
+  },
+  "prettier": {
+    "printWidth": 100,
+    "singleQuote": true,
+    "trailingComma": "es5"
   }
 }
