--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-typescript2": "^0.21.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.4.5",
+    "vue": "^2.6.10"
   },
   "peerDependencies": {
     "vue": "^2.0.0"
