--- a/package.json
+++ b/package.json
@@ -70,6 +70,9 @@
   },
   "jest": {
     "verbose": true,
+    "setupFiles": [
+      "<rootDir>/test/setupTest.js"
+    ],
     "setupFilesAfterEnv": [
       "<rootDir>/test/helpers/wait-for-update.js"
     ],
