--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-function-api",
-  "version": "2.2.0",
+  "version": "3.0.0-beta.0",
   "description": "Provide logic composition capabilities for Vue.",
   "keywords": [
     "vue",
