--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vue/composition-api",
-  "version": "3.0.0-beta.0",
+  "version": "0.1.0",
   "description": "Provide logic composition capabilities for Vue.",
   "keywords": [
     "vue",
