--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "rollup-plugin-typescript2": "^0.21.0",
     "ts-jest": "^24.0.2",
     "typescript": "^3.6.2",
-    "vue": "^2.5.22"
+    "vue": "^2.5.22",
+    "vue-router": "^3.1.3"
   },
   "peerDependencies": {
     "vue": "^2.5.22"
