--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "ts-jest": "^24.0.2",
     "typescript": "^3.6.2",
     "vue": "^2.5.22",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vue-server-renderer": "^2.6.10"
   },
   "peerDependencies": {
     "vue": "^2.5.22"
