--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "homepage": "https://github.com/vuejs/composition-api#readme",
   "devDependencies": {
-    "@types/jest": "^24.0.13",
+    "@types/jest": "^25.2.1",
     "@types/node": "^12.0.2",
     "cross-env": "^5.2.0",
     "husky": "^2.7.0",
@@ -76,6 +76,9 @@
   },
   "jest": {
     "verbose": true,
+    "globals": {
+      "__DEV__": true
+    },
     "setupFiles": [
       "<rootDir>/test/setupTest.js"
     ],
