--- a/package.json
+++ b/package.json
@@ -35,29 +35,29 @@
   },
   "homepage": "https://github.com/vuejs/composition-api#readme",
   "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "@types/node": "^12.0.2",
-    "cross-env": "^5.2.0",
-    "husky": "^2.7.0",
-    "jest": "^24.8.0",
-    "lint-staged": "^8.2.1",
-    "prettier": "^1.18.2",
-    "rollup": "^1.12.0",
-    "rollup-plugin-node-resolve": "^5.0.0",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-terser": "^4.0.4",
-    "rollup-plugin-typescript2": "^0.21.0",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.6.2",
-    "vue": "^2.5.22",
-    "vue-router": "^3.1.3",
-    "vue-server-renderer": "^2.6.10"
+    "@rollup/plugin-node-resolve": "8.0.0",
+    "@rollup/plugin-replace": "^2.3.2",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^14.0.6",
+    "cross-env": "^7.0.2",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "lint-staged": "^10.2.7",
+    "prettier": "^2.0.5",
+    "rollup": "^2.12.0",
+    "rollup-plugin-terser": "^6.1.0",
+    "rollup-plugin-typescript2": "^0.27.1",
+    "ts-jest": "^26.1.0",
+    "typescript": "^3.9.3",
+    "vue": "^2.6.11",
+    "vue-router": "^3.3.2",
+    "vue-server-renderer": "^2.6.11"
   },
   "peerDependencies": {
     "vue": "^2.5.22"
   },
   "dependencies": {
-    "tslib": "^1.9.3"
+    "tslib": "^2.0.0"
   },
   "husky": {
     "hooks": {
