feat(test): add dts testing (#347)
* feat(test): add dts testing

* update test script

* update github actions

* chore: update to align with vue-next

* clean up

* fix test

* fix

* Update .github/workflows/nodejs.yml

Co-authored-by: Carlos Rodrigues <david-181@hotmail.com>

Co-authored-by: Carlos Rodrigues <david-181@hotmail.com>

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,13 +1,12 @@
-name: Node CI
+name: Build & Test
 
 on:
   pull_request:
     branches:
-    - master
+      - master
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -15,15 +14,22 @@ jobs:
         node-version: [10.x, 12.x]
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: npm install, build, and test
-      run: |
-        npm install
-        npm run build --if-present
-        npm test
-      env:
-        CI: true
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install
+        run: yarn install --frozen-lockfile
+      - name: Build
+        run: yarn build
+        env:
+          CI: true
+      - name: Typing Declartion Tests
+        run: yarn test-dts
+        env:
+          CI: true
+      - name: Unit Tests
+        run: yarn test
+        env:
+          CI: true
+      
