--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es5",
     "lib": ["dom", "esnext"],
     "declaration": true,
+    "declarationDir": "./typings",
     "module": "esnext",
     "moduleResolution": "node",
     "skipLibCheck": true,
@@ -19,5 +20,6 @@
     "downlevelIteration": true,
     "noUnusedLocals": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["typings"]
 }
