chore: automate release scripts (#367)
* chore: automate release scripts

* yarnrc

* update test order

* combine unit tests and type test

* release script no longer needed

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,16 +23,12 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install
         run: yarn install --frozen-lockfile
-      - name: Build
-        run: yarn build
-        env:
-          CI: true
       - name: Typing Declartion Tests
         run: yarn test-dts
         env:
           CI: true
       - name: Unit Tests
-        run: yarn test
+        run: yarn test-unit
         env:
           CI: true
       
