--- a/package.json
+++ b/package.json
@@ -28,9 +28,15 @@
     "start": "cross-env TARGET=es rollup -c -w",
     "build": "rimraf dist typings && tsc --emitDeclarationOnly && rollup -c",
     "lint": "prettier --write --parser typescript \"{src,test,test-dts}/*.ts?(x)\" && prettier --write \"{src,test}/*.js\"",
-    "test": "cross-env NODE_ENV=test jest",
-    "test-dts": "tsc -p ./test-dts/tsconfig.json && npm run build && tsc -p ./test-dts/tsconfig.build.json",
-    "release": "bash scripts/release.sh"
+    "test": "yarn test-dts && yarn test-unit",
+    "test-unit": "cross-env NODE_ENV=test jest",
+    "test-dts": "tsc -p ./test-dts/tsconfig.json && yarn build && tsc -p ./test-dts/tsconfig.build.json",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "prepublish": "yarn test",
+    "postpublish": "yarn release-gh",
+    "version": "yarn changelog && git add CHANGELOG.md",
+    "release": "yarn version && yarn publish",
+    "release-gh": "conventional-github-releaser -p angular"
   },
   "bugs": {
     "url": "https://github.com/vuejs/composition-api/issues"
@@ -41,6 +47,8 @@
     "@rollup/plugin-replace": "^2.3.2",
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.6",
+    "conventional-changelog-cli": "^2.0.31",
+    "conventional-github-releaser": "^3.1.3",
     "cross-env": "^7.0.2",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
