--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "dist"
   ],
   "scripts": {
-    "start": "cross-env TARGET=es rollup -c -w",
+    "start": "concurrently \"tsc --emitDeclarationOnly -w\" \"cross-env TARGET=es rollup -c -w\"",
     "build": "rimraf dist typings && tsc --emitDeclarationOnly && rollup -c",
     "lint": "prettier --write --parser typescript \"{src,test,test-dts}/*.ts?(x)\" && prettier --write \"{src,test}/*.js\"",
     "test": "yarn test-dts && yarn test-unit",
@@ -47,6 +47,7 @@
     "@rollup/plugin-replace": "^2.3.2",
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.6",
+    "concurrently": "^5.2.0",
     "conventional-changelog-cli": "^2.0.31",
     "conventional-github-releaser": "^3.1.3",
     "cross-env": "^7.0.2",
