--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,12 +1,6 @@
 name: Build & Test
 
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+on: [push, pull_request]
 
 jobs:
   build:
@@ -31,4 +25,3 @@ jobs:
         run: yarn test-unit
         env:
           CI: true
-      
