--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "type": "git",
     "url": "git+https://github.com/vuejs/composition-api.git"
   },
-  "main": "dist/vue-composition-api.js",
-  "umd:main": "dist/vue-composition-api.umd.js",
-  "browser": "dist/vue-composition-api.umd.js",
-  "module": "dist/vue-composition-api.module.js",
+  "main": "index.js",
+  "module": "dist/vue-composition-api.esm.js",
+  "browser": "dist/vue-composition-api.prod.js",
+  "unpkg": "dist/vue-composition-ap.prod.js",
+  "jsdelivr": "dist/vue-composition-api.prod.js",
   "typings": "dist/index.d.ts",
   "author": {
     "name": "liximomo",
@@ -23,7 +24,8 @@
   "license": "MIT",
   "sideEffects": false,
   "files": [
-    "dist"
+    "dist",
+    "index.js"
   ],
   "scripts": {
     "start": "concurrently \"tsc --emitDeclarationOnly -w\" \"cross-env TARGET=es rollup -c -w\"",
