--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "index.js"
   ],
   "scripts": {
-    "start": "concurrently \"tsc --emitDeclarationOnly -w\" \"cross-env TARGET=es rollup -c -w\"",
+    "start": "concurrently \"tsc --emitDeclarationOnly -w\" \"cross-env rollup -c -w\"",
     "build": "rimraf dist typings && tsc --emitDeclarationOnly && rollup -c",
     "lint": "prettier --write --parser typescript \"{src,test,test-dts}/**/*.ts?(x)\" && prettier --write \"{src,test}/**/*.js\"",
     "test": "yarn test-dts && yarn test-unit",
