--- a/package.json
+++ b/package.json
@@ -35,10 +35,8 @@
     "test-dts": "tsc -p ./test-dts/tsconfig.json && yarn build && tsc -p ./test-dts/tsconfig.build.json",
     "update-readme": "node ./scripts/update-readme.js",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "prepublish": "yarn test",
-    "postpublish": "yarn release-gh",
     "version": "yarn changelog && yarn update-readme && git add CHANGELOG.md README.*",
-    "release": "yarn version && git push --follow-tags && yarn publish --non-interactive",
+    "release": "yarn test && npx bumpp --tag --commit --push && yarn publish --non-interactive && yarn release-gh",
     "release-gh": "conventional-github-releaser -p angular"
   },
   "bugs": {
