--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "update-readme": "node ./scripts/update-readme.js",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "version": "yarn changelog && yarn update-readme && git add CHANGELOG.md README.*",
-    "release": "yarn test && npx bumpp --tag --commit --push && yarn publish --non-interactive && yarn release-gh",
+    "release": "yarn test && yarn publish && git push && yarn release-gh",
     "release-gh": "conventional-github-releaser -p angular"
   },
   "bugs": {
