--- a/package.json
+++ b/package.json
@@ -44,28 +44,28 @@
   },
   "homepage": "https://github.com/vuejs/composition-api#readme",
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "8.4.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^2.3.3",
-    "@types/jest": "^26.0.9",
-    "@types/node": "^14.0.27",
+    "@types/jest": "^26.0.13",
+    "@types/node": "^14.10.1",
     "concurrently": "^5.3.0",
-    "conventional-changelog-cli": "^2.0.35",
+    "conventional-changelog-cli": "^2.1.0",
     "conventional-github-releaser": "^3.1.5",
     "cross-env": "^7.0.2",
-    "husky": "^4.2.5",
-    "jest": "^26.3.0",
-    "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5",
+    "husky": "^4.3.0",
+    "jest": "^26.4.2",
+    "lint-staged": "^10.3.0",
+    "prettier": "^2.1.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.23.1",
-    "rollup-plugin-dts": "^1.4.10",
-    "rollup-plugin-terser": "^7.0.0",
+    "rollup": "^2.26.11",
+    "rollup-plugin-dts": "^1.4.13",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.27.2",
-    "ts-jest": "^26.1.4",
-    "typescript": "^3.9.7",
-    "vue": "^2.6.11",
-    "vue-router": "^3.4.2",
-    "vue-server-renderer": "^2.6.11"
+    "ts-jest": "^26.3.0",
+    "typescript": "^4.0.2",
+    "vue": "^2.6.12",
+    "vue-router": "^3.4.3",
+    "vue-server-renderer": "^2.6.12"
   },
   "peerDependencies": {
     "vue": ">= 2.5 < 3"
