--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "update-readme": "node ./scripts/update-readme.js",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "version": "yarn changelog && yarn update-readme && git add CHANGELOG.md README.*",
-    "release": "yarn version && yarn test && yarn publish --non-interactive && git push --follow-tags",
+    "release": "yarn version && yarn test && yarn publish --non-interactive --tag next && git push --follow-tags",
     "release-gh": "conventional-github-releaser -p angular"
   },
   "bugs": {
