fix: build for mjs and exports all submodules

--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "url": "git+https://github.com/vuejs/composition-api.git"
   },
   "main": "./index.js",
-  "module": "./dist/vue-composition-api.esm.js",
+  "module": "./dist/vue-composition-api.mjs",
   "unpkg": "./dist/vue-composition-api.prod.js",
   "jsdelivr": "./dist/vue-composition-api.prod.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/vue-composition-api.esm.js",
+      "import": "./dist/vue-composition-api.mjs",
       "require": "./index.js"
-    }
+    },
+    "./*": "./*"
   },
   "author": {
     "name": "liximomo",
