--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "url": "git+https://github.com/vuejs/composition-api.git"
   },
   "main": "./index.js",
-  "module": "./dist/vue-composition-api.mjs",
+  "module": "./dist/vue-composition-api.esm.js",
   "unpkg": "./dist/vue-composition-api.prod.js",
   "jsdelivr": "./dist/vue-composition-api.prod.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/vue-composition-api.mjs",
+      "import": "./dist/vue-composition-api.esm.js",
       "require": "./index.js"
     },
     "./*": "./*"
