--- a/package.json
+++ b/package.json
@@ -33,16 +33,15 @@
     "index.js"
   ],
   "scripts": {
-    "start": "concurrently \"tsc --emitDeclarationOnly -w\" \"cross-env rollup -c -w\"",
-    "build": "rimraf dist typings && tsc --emitDeclarationOnly && rollup -c",
+    "start": "rollup -c -w",
+    "build": "rimraf dist && rollup -c",
     "lint": "prettier --write --parser typescript \"{src,test,test-dts}/**/*.ts?(x)\" && prettier --write \"{src,test}/**/*.js\"",
-    "test": "yarn test-dts && yarn test-unit",
-    "test-unit": "cross-env NODE_ENV=test jest",
-    "test-dts": "tsc -p ./test-dts/tsconfig.json && tsc -p ./test-dts/tsconfig.vue3.json && yarn build && tsc -p ./test-dts/tsconfig.build.json",
+    "test": "cross-env NODE_ENV=test jest",
+    "test:all": "pnpm run test && pnpm run test:dts",
+    "test:dts": "tsc -p ./test-dts/tsconfig.json && tsc -p ./test-dts/tsconfig.vue3.json && pnpm run build && tsc -p ./test-dts/tsconfig.build.json",
     "update-readme": "node ./scripts/update-readme.js",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "version": "yarn changelog && yarn update-readme && git add CHANGELOG.md README.*",
-    "release": "yarn version && yarn test && yarn publish --non-interactive && git push --follow-tags",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s && pnpm run update-readme && git add CHANGELOG.md README.*",
+    "release": "bumpp -x \"npm run changelog\" --all --tag --commit --push && npm publish",
     "release-gh": "conventional-github-releaser -p angular"
   },
   "bugs": {
@@ -56,25 +55,25 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.0.6",
-    "@rollup/plugin-replace": "^2.4.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-replace": "^3.0.1",
     "@types/jest": "^26.0.24",
-    "@types/node": "^15.14.9",
-    "concurrently": "^6.3.0",
-    "conventional-changelog-cli": "^2.1.1",
+    "@types/node": "^17.0.12",
+    "bumpp": "^7.1.1",
+    "conventional-changelog-cli": "^2.2.2",
     "conventional-github-releaser": "^3.1.5",
     "cross-env": "^7.0.3",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "lint-staged": "^11.2.6",
-    "prettier": "^2.4.1",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.59.0",
+    "rollup": "^2.66.1",
     "rollup-plugin-dts": "^3.0.2",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-typescript2": "^0.31.1",
     "ts-jest": "^26.5.6",
-    "typescript": "^4.4.4",
+    "typescript": "^4.5.5",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vue-server-renderer": "^2.6.14",
