--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.1",
     "ts-jest": "^26.5.6",
+    "tslib": "^2.3.1",
     "typescript": "^4.5.5",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
