--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "update-readme": "node ./scripts/update-readme.js",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s && pnpm run update-readme && git add CHANGELOG.md README.*",
     "release": "bumpp -x \"npm run changelog\" --all --tag --commit --push && npm publish",
-    "release-gh": "conventional-github-releaser -p angular"
+    "release-gh": "conventional-github-releaser -p angular",
+    "prepublishOnly": "npm run build"
   },
   "bugs": {
     "url": "https://github.com/vuejs/composition-api/issues"
