--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@vue/composition-api",
   "version": "1.6.0",
+  "packageManager": "pnpm@7.0.0",
   "description": "Provide logic composition capabilities for Vue.",
   "keywords": [
     "vue",
@@ -53,44 +54,40 @@
     "vue": ">= 2.5 < 3"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-replace": "^3.0.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-replace": "^4.0.0",
     "@types/jest": "^26.0.24",
-    "@types/node": "^17.0.12",
+    "@types/node": "^17.0.31",
     "bumpp": "^7.1.1",
     "conventional-changelog-cli": "^2.2.2",
     "conventional-github-releaser": "^3.1.5",
     "cross-env": "^7.0.3",
-    "husky": "^4.3.8",
     "jest": "^26.6.3",
-    "lint-staged": "^11.2.6",
-    "prettier": "^2.5.1",
+    "lint-staged": "^12.4.1",
+    "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.66.1",
-    "rollup-plugin-dts": "^3.0.2",
+    "rollup": "^2.72.0",
+    "rollup-plugin-dts": "^4.2.1",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.31.1",
+    "rollup-plugin-typescript2": "^0.31.2",
+    "simple-git-hooks": "^2.7.0",
     "ts-jest": "^26.5.6",
-    "tslib": "^2.3.1",
-    "typescript": "^4.5.5",
+    "tslib": "^2.4.0",
+    "typescript": "^4.6.4",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vue-server-renderer": "^2.6.14",
     "vue3": "npm:vue@3.2.21"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+  "simple-git-hooks": {
+    "pre-commit": "lint-staged"
   },
   "lint-staged": {
     "*.js": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ],
     "*.ts?(x)": [
-      "prettier --parser=typescript --write",
-      "git add"
+      "prettier --parser=typescript --write"
     ]
   },
   "jest": {
