--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "start": "rollup -c -w",
     "build": "rimraf dist && rollup -c",
     "lint": "prettier --write --parser typescript \"{src,test,test-dts}/**/*.ts?(x)\" && prettier --write \"{src,test}/**/*.js\"",
-    "test": "cross-env NODE_ENV=test jest",
+    "test": "vitest",
     "test:all": "pnpm run test && pnpm run test:dts",
     "test:dts": "tsc -p ./test-dts/tsconfig.json && tsc -p ./test-dts/tsconfig.vue3.json && pnpm run build && tsc -p ./test-dts/tsconfig.build.json",
     "update-readme": "node ./scripts/update-readme.js",
@@ -56,13 +56,11 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^4.0.0",
-    "@types/jest": "^26.0.24",
     "@types/node": "^17.0.31",
     "bumpp": "^7.1.1",
     "conventional-changelog-cli": "^2.2.2",
     "conventional-github-releaser": "^3.1.5",
-    "cross-env": "^7.0.3",
-    "jest": "^26.6.3",
+    "jsdom": "^20.0.0",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
@@ -71,9 +69,9 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.2",
     "simple-git-hooks": "^2.7.0",
-    "ts-jest": "^26.5.6",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
+    "vitest": "^0.22.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vue-server-renderer": "^2.6.14",
@@ -89,27 +87,6 @@
     "*.ts?(x)": [
       "prettier --parser=typescript --write"
     ]
-  },
-  "jest": {
-    "verbose": true,
-    "globals": {
-      "__DEV__": true,
-      "__VERSION__": "0.0.0"
-    },
-    "setupFiles": [
-      "<rootDir>/test/setupTest.js"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/test/helpers/wait-for-update.js"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "testMatch": [
-      "<rootDir>/test/**/*.spec.{js,ts}"
-    ],
-    "preset": "ts-jest"
   },
   "prettier": {
     "semi": false,
