--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "lib": ["dom", "esnext"],
+    "types": ["vitest/globals"],
     "module": "esnext",
     "moduleResolution": "node",
     "skipLibCheck": true,
@@ -19,5 +20,5 @@
     "downlevelIteration": true,
     "noUnusedLocals": true
   },
-  "include": ["src"]
+  "include": ["src", "test", "test-dts"]
 }
